variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:8: error: ')' expected but '}' found.
	}
        ^